--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
         const c5 = document.getElementById('admin-campo5').value;
         
 
-        if(!c1 || !c2 || !c3 || !c4) return alert("Preencha todos os campos!");
+        if(!c1 || !c2 || !c3 || !c4 || !c5) return alert("Preencha todos os campos!");
 
         // CONFIGURAÇÃO DO GOOGLE FORMS
         const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSfHpe7Idb8cekKYPyOOs8xn5sSfCQhWLKqUYwF4uXaz4QBX9w/formResponse";
