--- a/index.html
+++ b/index.html
@@ -542,8 +542,10 @@
             <input type="text" id="admin-campo5" placeholder="Digite aqui...">
         </div>
         <button class="btn btn-gerar" style="width:100%; background: var(--success);" onclick="enviarFormAdmin()">Salvar alteração no Produto</button>
+        <button class="btn btn-nav" style="width:100%; margin-top:10px; background: var(--danger); border: none;" onclick="fecharModal('modalAdminForm')">SAIR</button>
     </div>
 </div>
+
 
 <script>
     // LÓGICA DE LOGIN E ISOLAMENTO DE DADOS
