--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <button class="btn btn-nav" style="background: #334155; border: none;" onclick="limparHD()">💾 Limpar HD</button>
             <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="logout()">🚪 Sair</button>
             <a href="">
-            <button class="btn btn-nav" style="background: #BCCF1D; border: none; text-decoration: none;"></button>
+            <button class="btn btn-nav" style="background: #BCCF1D; border: none; text-decoration: none;">🧑‍💻 Admin 🧑‍💻</button>
             </a>         
         </nav>
     </header>
