--- a/index.html
+++ b/index.html
@@ -366,8 +366,10 @@
             <button class="btn btn-nav" style="border-color: var(--primary);" onclick="abrirRankingProdutos()">📦 Estoque</button>
             <button class="btn btn-nav" style="background: #334155; border: none;" onclick="limparHD()">💾 Limpar HD</button>
             <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="logout()">🚪 Sair</button>
-            <a href="">
-            <button class="btn btn-nav" style="background: #BCCF1D; border: none; text-decoration: none;">🧑‍💻 Admin 🧑‍💻</button>
+          
+            <a href="#"
+            class="btn btn-nav" style="background: #BCCF1D; border: none; text-decoration: none;">
+            🧑‍💻 Admin 🧑‍💻
             </a>         
         </nav>
     </header>
