--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="logout()">🚪 Sair</button>
           
             <a href="#"
-            class="btn btn-nav" style="background: #BCCF1D; border: none; text-decoration: none;">
+            class="btn btn-nav" style="border: none; text-decoration: none;">
             🧑‍💻 Admin 🧑‍💻
             </a>         
         </nav>
