--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <button class="btn btn-nav" style="background: #334155; border: none;" onclick="limparHD()">💾 Limpar HD</button>
             <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="logout()">🚪 Sair</button>
           
-            <a href="#"
+            <a href="Botao-Admin.html"
             class="btn btn-nav" style="border: none; text-decoration: none;">
             🧑‍💻 Admin 🧑‍💻
             </a>         
