--- a/Botao-Admin.html
+++ b/Botao-Admin.html
@@ -323,7 +323,7 @@
         }
 
         function verificarAcesso() {
-            if (document.getElementById('senha-acesso').value === "MJ-NUNACE") { //🚨🚨Senha🚨🚨
+            if (document.getElementById('senha-acesso').value === "MJ-NUANCE") { //🚨🚨Senha🚨🚨
                 document.getElementById('tela-bloqueio').style.display = 'none';
                 document.getElementById('admin-content').style.display = 'block';
                 carregarCatalogo();
