--- a/Botao-Admin.html
+++ b/Botao-Admin.html
@@ -312,7 +312,7 @@
 
     <script>
         let imagemParaExcluirId = null;
-        //🚨🚨🚨 SUBSTITUA ESTA CHAVE PELA SUA GERADA EM api.imgbb.com
+        //🚨🚨🚨 SUBSTITUA ESTA CHAVE PELA SUA GERADA EM api.imgbb.com ||• Acesse imgbb.com e crie uma conta gratuita
         const IMGBB_API_KEY = 'b2f2d2c7f96736dadf9fd17f82c72fb3'; 
 
         function showToast(msg) {
